--- a/index.ipynb
+++ b/index.ipynb
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -345,7 +345,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -388,7 +388,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -397,20 +397,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
     "# code goes here\n",
     "def mean_review_count(list_of_restaurants):\n",
-    "    pass"
+    "    review_count_sum = sum(list(map(lambda x:x['review_count'], list_of_restaurants)))\n",
+    "    return review_count_sum/len(list_of_restaurants)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 48,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1261.0"
+      ]
+     },
+     "execution_count": 48,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "mean_review_count(restaurant_list) #1261.0"
    ]
@@ -424,20 +436,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [],
    "source": [
     "# code goes here\n",
+    "\n",
+    "# import statistics\n",
+    "# from statistics import median\n",
+    "# def median_review_count(list_of_restaurants):\n",
+    "#     return statistics.median(list(map(lambda review : review['review_count'], list_of_restaurants)))\n",
+    "    \n",
     "def median_review_count(list_of_restaurants):\n",
-    "    pass"
+    "    sorted_list = sorted(list(map(lambda review : \n",
+    "                review['review_count'], list_of_restaurants)))\n",
+    "   \n",
+    "    \n",
+    "    if len(sorted_list)%2 == 0:\n",
+    "        median = (sorted_list[int(len(sorted_list)/2)] \n",
+    "                  + sorted_list[int(len(sorted_list)/2 - 1)]) / 2\n",
+    "        return median\n",
+    "    \n",
+    "    if len(sorted_list)%2 == 1:\n",
+    "        median = sorted_list[(len(sorted_list)/2 - 0.5)]\n",
+    "        return median\n",
+    "    \n",
+    "    \n",
+    "        "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 66,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1284.5"
+      ]
+     },
+     "execution_count": 66,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "median_review_count(restaurant_list) #1284.5"
    ]
@@ -468,7 +511,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.6.6"
   }
  },
  "nbformat": 4,
